<resources>
    <string name="app_name">TaxiTouchZgz</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>

    <string name="Info">Info</string>

    <string-array name="neighborhoods">
        <item>All</item>
        <item>Actur</item>
        <item>Parque Goya</item>
        <item>Arcosur</item>
        <item>Casablanca</item>
        <item>Montecanal</item>
        <item>Valdespartera</item>
        <item>Centro</item>
        <item>La Bombarda</item>
        <item>Delicias</item>
        <item>La Jota</item>
        <item>Arrabal</item>
        <item>Cogullada</item>
        <item>Picarral</item>
        <item>Vadorrey</item>
        <item>La Almozara</item>
        <item>Las Fuentes</item>
        <item>Miralbueno</item>
        <item>Oliver</item>
        <item>San Jose</item>
        <item>Miraflores</item>
        <item>Santa Isabel</item>
        <item>Torrero</item>
        <item>Puerto Venecia</item>
        <item>Universidad</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="UsePosition">Use current position</string>
    <string name="Lat">Lat:</string>
    <string name="Lon">Lon:</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>
    <string name="Dest">Destination</string>
    <string name="notification">notification</string>
    <string name="Question">Do you wish to go with </string>
    <string name="Chat">Chat</string>
    <string name="Taxi">Taxi</string>
    <string name="goChat" />

</resources>
